@startuml
class MappingProfile {
}
Profile <|-- MappingProfile
class Program <<static>> {
}
class Startup {
}
class ValidationFilterAttribute {
}
IActionFilter <|-- ValidationFilterAttribute
class AccessoriesController {
}
ControllerBase <|-- AccessoriesController
class ComponentsController {
}
ControllerBase <|-- ComponentsController
class ConsumablesController {
}
ControllerBase <|-- ConsumablesController
class DevicesController {
}
ControllerBase <|-- DevicesController
class EmployeesController {
}
ControllerBase <|-- EmployeesController
class LicensesController {
}
ControllerBase <|-- LicensesController
class UsersController {
}
ControllerBase <|-- UsersController
class ExceptionMiddlewareExtensions <<static>> {
}
class ServiceExtensions <<static>> {
}
class InitialCreate <<partial>> {
}
Migration <|-- InitialCreate
class InitialCreate <<partial>> {
}
class DbSeed1 <<partial>> {
}
Migration <|-- DbSeed1
class DbSeed1 <<partial>> {
}
class ConvertEnumsToStrings <<partial>> {
}
Migration <|-- ConvertEnumsToStrings
class ConvertEnumsToStrings <<partial>> {
}
class UpdateConsumableEntity <<partial>> {
}
Migration <|-- UpdateConsumableEntity
class UpdateConsumableEntity <<partial>> {
}
class UpdateConsumableEnumCategoryToString <<partial>> {
}
Migration <|-- UpdateConsumableEnumCategoryToString
class UpdateConsumableEnumCategoryToString <<partial>> {
}
class AddIdentity <<partial>> {
}
Migration <|-- AddIdentity
class AddIdentity <<partial>> {
}
class ApplicationContextModelSnapshot <<partial>> {
}
ModelSnapshot <|-- ApplicationContextModelSnapshot
@enduml
